feat: add source export condition for monorepo live types
Add "source" custom condition to exports map so consuming projects
can resolve TypeScript sources directly during development via
resolve.conditions/customConditions, without requiring a build step.

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "exports": {
     ".": {
+      "source": "./src/index.ts",
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js"
     }
