--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/recca0120/msw-fetch-mock.git"
+    "url": "git+https://github.com/recca0120/msw-fetch-mock.git"
   },
   "packageManager": "pnpm@10.12.4",
   "engines": {
