fix(ci): skip prepare script in integration tests to avoid lefthook

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           node-version: 22
           cache: pnpm
-      - run: pnpm install
+      - run: pnpm install --ignore-scripts && npm rebuild
       - run: pnpm build
       - uses: actions/upload-artifact@v4
         with:
@@ -35,7 +35,7 @@ jobs:
         with:
           name: dist
           path: dist/
-      - run: cd integration/jest-esm && npm install && npm test
+      - run: cd integration/jest-esm && npm install --ignore-scripts && npm rebuild && npm test
 
   jest-cjs:
     needs: build
@@ -49,7 +49,7 @@ jobs:
         with:
           name: dist
           path: dist/
-      - run: cd integration/jest-cjs && npm install && npm test
+      - run: cd integration/jest-cjs && npm install --ignore-scripts && npm rebuild && npm test
 
   node-test:
     needs: build
@@ -63,7 +63,7 @@ jobs:
         with:
           name: dist
           path: dist/
-      - run: cd integration/node-test && npm install && npm test
+      - run: cd integration/node-test && npm install --ignore-scripts && npm rebuild && npm test
 
   vitest-browser:
     needs: build
@@ -77,6 +77,6 @@ jobs:
         with:
           name: dist
           path: dist/
-      - run: cd integration/vitest-browser && npm install
+      - run: cd integration/vitest-browser && npm install --ignore-scripts && npm rebuild
       - run: cd integration/vitest-browser && npx playwright install --with-deps chromium
       - run: cd integration/vitest-browser && npm test
