--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -18,10 +18,11 @@ jobs:
           cache: pnpm
       - run: pnpm install
       - run: pnpm build
+      - run: npm pack && mv msw-fetch-mock-*.tgz msw-fetch-mock.tgz
       - uses: actions/upload-artifact@v4
         with:
-          name: dist
-          path: dist/
+          name: package-tarball
+          path: msw-fetch-mock.tgz
 
   jest-esm:
     needs: build
@@ -33,10 +34,9 @@ jobs:
           node-version: 22
       - uses: actions/download-artifact@v4
         with:
-          name: dist
-          path: dist/
-      - run: npm pkg delete scripts.prepare
-      - run: cd integration/jest-esm && npm install
+          name: package-tarball
+          path: .
+      - run: cd integration/jest-esm && npm pkg set "dependencies.msw-fetch-mock=file:../../msw-fetch-mock.tgz" && npm install
       - run: cd integration/jest-esm && npm test
 
   jest-cjs:
@@ -49,10 +49,9 @@ jobs:
           node-version: 22
       - uses: actions/download-artifact@v4
         with:
-          name: dist
-          path: dist/
-      - run: npm pkg delete scripts.prepare
-      - run: cd integration/jest-cjs && npm install
+          name: package-tarball
+          path: .
+      - run: cd integration/jest-cjs && npm pkg set "dependencies.msw-fetch-mock=file:../../msw-fetch-mock.tgz" && npm install
       - run: cd integration/jest-cjs && npm test
 
   node-test:
@@ -65,10 +64,9 @@ jobs:
           node-version: 20
       - uses: actions/download-artifact@v4
         with:
-          name: dist
-          path: dist/
-      - run: npm pkg delete scripts.prepare
-      - run: cd integration/node-test && npm install
+          name: package-tarball
+          path: .
+      - run: cd integration/node-test && npm pkg set "dependencies.msw-fetch-mock=file:../../msw-fetch-mock.tgz" && npm install
       - run: cd integration/node-test && npm test
 
   vitest-browser:
@@ -81,9 +79,8 @@ jobs:
           node-version: 22
       - uses: actions/download-artifact@v4
         with:
-          name: dist
-          path: dist/
-      - run: npm pkg delete scripts.prepare
-      - run: cd integration/vitest-browser && npm install
+          name: package-tarball
+          path: .
+      - run: cd integration/vitest-browser && npm pkg set "dependencies.msw-fetch-mock=file:../../msw-fetch-mock.tgz" && npm install
       - run: cd integration/vitest-browser && npx playwright install --with-deps chromium
       - run: cd integration/vitest-browser && npm test
