feat: add pluggable HandlerFactory and legacy MSW v1 support
Extract MSW v2-specific handler/response creation from fetch-mock.ts
into a pluggable HandlerFactory interface, making the core FetchMock
class MSW-version-agnostic. Add msw-fetch-mock/legacy subpath export
for MSW v1 users via dependency injection of the `rest` API.

--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
       "source": "./src/browser.ts",
       "types": "./dist/browser.d.ts",
       "import": "./dist/browser.js"
+    },
+    "./legacy": {
+      "source": "./src/legacy.ts",
+      "types": "./dist/legacy.d.ts",
+      "import": "./dist/legacy.js"
     }
   },
   "files": [
@@ -56,7 +61,7 @@
     "prepublishOnly": "tsc"
   },
   "peerDependencies": {
-    "msw": "^2.12.7"
+    "msw": "^1.0.0 || ^2.12.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
