fix: revert jest-cjs to dynamic import, add node-cjs e2e for CJS require testing
Jest CJS mode can't handle MSW's ESM-only dependency (until-async).
Instead of adding babel workarounds to the jest-cjs e2e, revert it
to the original dynamic import approach and add a dedicated node-cjs
e2e test that verifies require('msw-fetch-mock/node') works in plain
Node.js without any extra configuration.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,21 @@ jobs:
       - run: cd e2e/node-test && npm pkg set "dependencies.msw-fetch-mock=file:../../msw-fetch-mock.tgz" && npm install
       - run: cd e2e/node-test && npm test
 
+  e2e-node-cjs:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
+        with:
+          node-version: 20
+      - uses: actions/download-artifact@v4
+        with:
+          name: package-tarball
+          path: .
+      - run: cd e2e/node-cjs && npm pkg set "dependencies.msw-fetch-mock=file:../../msw-fetch-mock.tgz" && npm install
+      - run: cd e2e/node-cjs && npm test
+
   e2e-vitest-browser:
     needs: build
     runs-on: ubuntu-latest
