feat: add local e2e test script mirroring CI tarball approach
Add scripts/test-e2e.sh that builds, packs tarball, and runs e2e suites
locally. Supports --all flag and named suite selection.

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "lint:fix": "eslint src --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "prepublishOnly": "tsup"
+    "prepublishOnly": "tsup",
+    "test:e2e": "bash scripts/test-e2e.sh"
   },
   "peerDependencies": {
     "msw": "^1.0.0 || ^2.12.7"
