feat: add native fetch adapter for MSW-free usage
Add msw-fetch-mock/native subpath that patches globalThis.fetch
directly without requiring MSW. This enables usage in environments
where MSW cannot run (e.g. Cloudflare Workers workerd).

- NativeHandlerFactory: uses standard Response API
- NativeFetchAdapter: patches/restores globalThis.fetch
- native.ts entry point with singleton and createFetchMock()
- Mark msw as optional peer dependency (peerDependenciesMeta)
- E2E tests: native-esm and native-cjs (no msw installed)

--- a/package.json
+++ b/package.json
@@ -57,6 +57,15 @@
       },
       "import": "./dist/legacy.js",
       "require": "./dist/legacy.cjs"
+    },
+    "./native": {
+      "source": "./src/native.ts",
+      "types": {
+        "import": "./dist/native.d.ts",
+        "require": "./dist/native.d.cts"
+      },
+      "import": "./dist/native.js",
+      "require": "./dist/native.cjs"
     }
   },
   "files": [
@@ -80,6 +89,11 @@
   },
   "peerDependencies": {
     "msw": "^1.0.0 || ^2.12.7"
+  },
+  "peerDependenciesMeta": {
+    "msw": {
+      "optional": true
+    }
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
