fix(ci): update npm to latest for OIDC support

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,7 @@ jobs:
           node-version: 22
           cache: pnpm
           registry-url: 'https://registry.npmjs.org'
+      - run: npm install -g npm@latest
       - run: pnpm install
       - run: pnpm build
       - run: npm publish --provenance --access public
