refactor: keep noExplicitAny and noUnusedVariables enforced in tests
- Remove unnecessary off overrides for test files
- Fix 3 noExplicitAny violations: replace any with unknown, use Object.assign
- Remove leftover eslint-disable-next-line comments

--- a/biome.json
+++ b/biome.json
@@ -79,8 +79,8 @@
 			"includes": ["**/*.test.ts", "**/*.test.tsx", "**/*.spec.ts", "e2e/**/*.test.*"],
 			"linter": {
 				"rules": {
-					"suspicious": { "noExplicitAny": "off", "noConsole": "off" },
-					"correctness": { "noUnusedVariables": "off", "noUnusedFunctionParameters": "off" },
+					"suspicious": { "noConsole": "off" },
+					"correctness": { "noUnusedFunctionParameters": "off" },
 					"style": { "noNonNullAssertion": "off" }
 				}
 			}
