--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"root": false,
+	"root": true,
 	"$schema": "https://biomejs.dev/schemas/2.3.15/schema.json",
 	"vcs": {
 		"clientKind": "git",
